<resources>
    <string name="app_name">Hyb</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile_image">"Profile Image"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="phonenumber">Phonenumber</string>
    <string name="add_item_shoppinglist">FAB for adding item to shoppinglist</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="register_new_account">Register new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="join_or_create_a_new_resident">Join or create a new resident</string>
    <string name="join_resident">Join resident</string>
    <string name="create_resident">Create resident</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="join_or_create_a_new_room">Join or create a new room</string>
    <string name="join_a_room">Join a room</string>
    <string name="create_a_room">Create a room</string>
    <string name="back">Back</string>
    <string name="residentid">ResidentID</string>
    <string name="join_a_resident">Join a resident</string>
    <string name="upcoming_events">Upcoming events</string>
    <!-- Chat Strings -->
    <string name="type_your_message">Type your message...</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="hyb">HYB</string>
    <!-- Create Housing Strings -->
    <string name="ResidentName">Resident - name</string>
    <string name="resident_address">Resident Address</string>
    <string name="resident_city">Resident City</string>
    <string name="resident_country">Resident Country</string>
    <string name="createHousing">Create Housing</string>
    <!-- AddEvent fragment Strings -->
    <string name="fab_new_event">FAB for creating new event</string>
    <string name="eventTitle">Event title</string>
    <string name="eventLocation">Event location</string>
    <string name="eventDescription">Event description</string>
    <string name="createEvent">Create Event</string>
    <string name="SelectStartTime">select</string>
    <string name="SelectEndTime">select</string>
    <string name="eventStartTime">Start Date and Time</string>
    <string name="eventEndTime">End Date and Time</string>
    <!-- ShoppingListFragment Strings -->
    <string name="Enter_Item">Enter Item Here</string>
    <string name="Enter_Amount">Amount</string>
    <string name="item_name">Item Name:</string>
    <string name="item_amount">Item Amount:</string>
    <string name="shopping_item_delete_button">Delete</string>
    <string name="sign_out">Sign out</string>
    <string name="change_password">Change password</string>
    <string name="change_user_information">Change user-information</string>
    <string name="delete_account">Delete account</string>
    <string name="leave_resident">Leave Resident</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
    <string name="back_to_settings">Back to settings</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="task_deleted_successfully">Task deleted successfully</string>
    <string name="you_have_unread_messages">You have unread messages</string>
    <string name="you_have_new_tasks_to_do">You have new tasks to do</string>
    <string name="you_have_new_items_to_buy">You have new items to buy</string>
    <string name="dismiss">Dismiss</string>
    <string name="all_fields_are_required">All fields are required!</string>
    <string name="event_created_successfully">Event created successfully</string>
    <string name="error_occurred_creating_event">An error occurred creating event</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="see_details">See details</string>
    <string name="attend">Attend</string>
    <string name="attending">Attending:</string>
    <string name="event_detail">Event Detail</string>
    <string name="event_deleted_successfully">Event deleted successfully</string>
    <string name="attendance_registration_successful">Attendance registration successful</string>

    <!-- Add task fragment-->
    <string name="fab_new_task">FAB for creating new task</string>
    <string name="new_task">New Task</string>
    <string name="Delete_Task_from_tasklist">image button for deleting todo items</string>
    <string name="delete_events_imageview">imageview for deleting events</string>
    <string name="message">Message</string>

</resources>