<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HybSettingsActivity.SettingsOperationFragment">


    <Button
        android:id="@+id/btnLeaveResident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_resident"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteAccount"
        app:layout_constraintEnd_toEndOf="@+id/btnDeleteAccount"
        app:layout_constraintStart_toStartOf="@+id/btnDeleteAccount" />

    <Button
        android:id="@+id/btnChangeUserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_user_information"
        app:layout_constraintBottom_toTopOf="@+id/btnChangePassword"
        app:layout_constraintEnd_toEndOf="@+id/btnChangePassword"
        app:layout_constraintStart_toStartOf="@+id/btnChangePassword" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        app:layout_constraintBottom_toTopOf="@+id/btnSignOut"
        app:layout_constraintEnd_toEndOf="@+id/btnSignOut"
        app:layout_constraintStart_toStartOf="@+id/btnSignOut" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeUserInfo"
        app:layout_constraintEnd_toEndOf="@+id/btnChangeUserInfo"
        app:layout_constraintStart_toStartOf="@+id/btnChangeUserInfo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Hyb is an android-application created as a student-project from HIOF. This application is in early release and still under development."
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBackToDashboard"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Back to Dashboard"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgBackToDashboard"
        app:layout_constraintStart_toEndOf="@+id/imgBackToDashboard"
        app:layout_constraintTop_toTopOf="@+id/imgBackToDashboard" />

</androidx.constraintlayout.widget.ConstraintLayout>