<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RegisterRoomFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterRoomFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnBackFromRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/ResidentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:autofillHints="ResidentID"
            android:background="@drawable/costume_input"
            android:ems="10"
            android:hint="@string/ResidentName"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="@color/secondary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/ResidentAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="ResidentID"
            android:background="@drawable/costume_input"
            android:ems="10"
            android:hint="@string/resident_address"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="@color/secondary_text"
            app:layout_constraintEnd_toEndOf="@+id/ResidentName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ResidentName"
            app:layout_constraintTop_toBottomOf="@+id/ResidentName"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/ResidentCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="ResidentID"
            android:background="@drawable/costume_input"
            android:ems="10"
            android:hint="@string/resident_city"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="@color/secondary_text"
            app:layout_constraintEnd_toEndOf="@+id/ResidentAddress"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/ResidentAddress"
            app:layout_constraintTop_toBottomOf="@+id/ResidentAddress"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/ResidentCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="ResidentID"
            android:background="@drawable/costume_input"
            android:ems="10"
            android:hint="@string/resident_country"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="@color/secondary_text"
            app:layout_constraintEnd_toEndOf="@+id/ResidentCity"
            app:layout_constraintStart_toStartOf="@+id/ResidentCity"
            app:layout_constraintTop_toBottomOf="@+id/ResidentCity"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/secondary_text"
            app:layout_constraintEnd_toEndOf="@+id/btnCreateHousing"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/btnCreateHousing"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateHousing">

        </TextView>

        <Button
            android:id="@+id/btnCreateHousing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/createHousing"
            app:layout_constraintEnd_toEndOf="@+id/ResidentCountry"
            app:layout_constraintHorizontal_bias="0.455"
            app:layout_constraintStart_toStartOf="@+id/ResidentCountry"
            app:layout_constraintTop_toBottomOf="@+id/ResidentCountry" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>