<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinRoomFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.912" />

        <EditText
            android:id="@+id/txtResidentID"
            android:layout_width="227dp"
            android:layout_height="48dp"
            android:autofillHints="ResidentID"
            android:background="@drawable/costume_input"
            android:ems="10"
            android:hint="@string/residentid"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintBottom_toTopOf="@+id/btnJoin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.806"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnJoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="136dp"
            android:text="@string/join_resident"
            app:layout_constraintBottom_toTopOf="@+id/btnBack"
            app:layout_constraintEnd_toEndOf="@+id/txtResidentID"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="@+id/txtResidentID" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="191dp"
            android:layout_height="41dp"
            android:text="@string/join_a_resident"
            android:textColor="@color/purple_700"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnJoin"
            app:layout_constraintEnd_toEndOf="@+id/txtResidentID"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="@+id/txtResidentID"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.363" />

        <TextView
            android:id="@+id/txtOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/btnBack"
            app:layout_constraintEnd_toEndOf="@+id/btnJoin"
            app:layout_constraintStart_toStartOf="@+id/btnJoin"
            app:layout_constraintTop_toBottomOf="@+id/btnJoin"
            app:layout_constraintVertical_bias="0.249" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>